# ragify

./: .gitignore  CMakeLists.txt  README.md
scripts/flutter_ffi_gen/: ffigen.yaml  pubspec.yaml  ragify_ffi.dart
src/: c_api.cpp  c_api.h  ragify.cpp  ragify.h
test/: CMakeLists.txt  test-ragify.cpp
